RenderLayer ClipRect not accounting for transforms https://bugs.webkit.org/show_bug.cgi?id=76486

Reviewed by Simon Fraser.

Source/WebCore:

Test: compositing/layer-creation/overlap-transformed-and-clipped.html

This patch changes calculateClipRects() so that the clipRect
offset is allowed to be converted across layers with
transforms. This is necessary because the RenderLayerCompositor
needs clipRects in document space, rather than with respect to
some local clipping layer.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects):
* rendering/RenderObject.cpp:
(WebCore::RenderObject::localToContainerPoint):
(WebCore):
* rendering/RenderObject.h:
(RenderObject):

LayoutTests:

* compositing/layer-creation/overlap-transformed-and-clipped-expected.png: Added.
* compositing/layer-creation/overlap-transformed-and-clipped-expected.txt: Added.
* compositing/layer-creation/overlap-transformed-and-clipped.html: Added.


Canonical link: https://commits.webkit.org/96822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109060 268f45cc-cd09-0410-ab3c-d52691b4dbfc